# Machine

./: Machine.cabal  README.md
src/Machine/: Loader.hs  Run.hs
src/Machine/Core/: Computer.hs  Types.hs
src/Test/Machine/: Loader.hs  QuickCheck.hs  Run.hs
src/Test/Machine/Core/: Computer.hs
tex/paper/: paper.tex
