name:                Machine
version:             1.0
-- synopsis:            
-- description:         
homepage:            https://www.linkedin.com/in/fadil/
license:             AllRightsReserved
license-file:        LICENSE
author:              Fadil Mokhchane
maintainer:          fadil.mokhchane@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable machine
  main-is:             Machine/Run.hs
  ghc-options:         -O2 -main-is Machine.Run.main
  -- other-modules:       
  -- other-extensions:    
  build-depends: 
    base >=4.9 && <4.10, 
    containers >=0.5.7.1, 
    mtl >= 2.2.1,
    deepseq >= 1.4.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite Machine-Test
  main-is:             Test/Machine/Run.hs
  ghc-options:         -O2 -main-is Test.Machine.Run
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.9 && <4.10, 
    containers >=0.5.7.1, 
    mtl >= 2.2.1,
    QuickCheck >= 2.9.2,
    deepseq >= 1.4.2.0
  hs-source-dirs:      src 
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
